Fix source version of start scripts
We regenerate the `frontend/bin` directory during build, so re-add this
to `.gitignore`

This fixes some parts of 61bc89ba6b15fb5a1bd65278ad5021929c751f9d